[gd_scene format=3 uid="uid://b8heo6jb0mtqh"]

[ext_resource type="Script" uid="uid://cg8sjy60b02fo" path="res://scripts/sfx_manager.gd" id="1_swcnf"]
[ext_resource type="AudioStream" uid="uid://dw6l5i801o51v" path="res://audio/sfx/voice/win lines/eclipso/13-Eclipso-ABitFaster.wav" id="2_v17bm"]
[ext_resource type="AudioStream" uid="uid://wtpb6h88015g" path="res://audio/sfx/voice/win lines/eclipso/8-Eclipso-TimeLeanedMyWay.wav" id="4_rj4sr"]
[ext_resource type="AudioStream" uid="uid://cvudsomoly5rf" path="res://audio/sfx/voice/win lines/eclipso/1-Eclipso-TooSlow.wav" id="5_e54hq"]
[ext_resource type="AudioStream" uid="uid://bebj6m3utxwng" path="res://audio/sfx/voice/win lines/eclipso/6-Eclipso-USuck.wav" id="6_2bd0h"]
[ext_resource type="AudioStream" uid="uid://b6dpsaea3lhbx" path="res://audio/sfx/voice/win lines/eclipso/9-Eclipso-FlipSide.wav" id="7_53mpv"]
[ext_resource type="AudioStream" uid="uid://c5oygd0wwdr7h" path="res://audio/sfx/voice/win lines/eclipso/5-Eclipso-LOSER.wav" id="8_c8tfm"]
[ext_resource type="AudioStream" uid="uid://1la4hvdwjv5d" path="res://audio/sfx/voice/win lines/eclipso/4-Eclipso-NoBigDeal.wav" id="9_pytyn"]
[ext_resource type="AudioStream" uid="uid://coovadarl36ml" path="res://audio/sfx/voice/win lines/eclipso/3-Eclipso-NothingOnMe.wav" id="10_yej68"]
[ext_resource type="AudioStream" uid="uid://chgfphaf2fy1q" path="res://audio/sfx/voice/win lines/eclipso/10-Eclipso-OutOfOptions.wav" id="11_t6b4k"]
[ext_resource type="AudioStream" uid="uid://drow8k6njggf" path="res://audio/sfx/voice/win lines/eclipso/12-Eclipso-OvercommittedAgain.wav" id="12_5h8qd"]
[ext_resource type="AudioStream" uid="uid://b6l7jyqmd318x" path="res://audio/sfx/voice/win lines/eclipso/7-Eclipso-SkillIssue.wav" id="13_3mj2n"]
[ext_resource type="AudioStream" uid="uid://dre7xu0y8c58w" path="res://audio/sfx/voice/win lines/eclipso/2-Eclipso-SpeedUp.wav" id="14_h5s1v"]
[ext_resource type="AudioStream" uid="uid://ddg3tiaw6r58e" path="res://audio/sfx/voice/win lines/lunaire/LUNAIRE 1.wav" id="14_pytyn"]
[ext_resource type="AudioStream" uid="uid://cuemuigcrdwys" path="res://audio/sfx/footsteps/footstep1.wav" id="15_ukd00"]
[ext_resource type="AudioStream" uid="uid://u2wyuwaodxm5" path="res://audio/sfx/voice/win lines/lunaire/LUNAIRE 2.wav" id="15_yej68"]
[ext_resource type="AudioStream" uid="uid://dyuwdwlie1xld" path="res://audio/sfx/footsteps/footstep2.wav" id="16_ag30j"]
[ext_resource type="AudioStream" uid="uid://cpc4dpsourykf" path="res://audio/sfx/voice/win lines/lunaire/LUNAIRE 3 .wav" id="16_t6b4k"]
[ext_resource type="AudioStream" uid="uid://smgnr11bu55k" path="res://audio/sfx/voice/win lines/lunaire/LUNAIRE 4.wav" id="17_5h8qd"]
[ext_resource type="AudioStream" uid="uid://cohvkno1x7rdi" path="res://audio/sfx/footsteps/footstep3.wav" id="17_ul2n7"]
[ext_resource type="AudioStream" uid="uid://8kdau7karmwb" path="res://audio/sfx/voice/win lines/lunaire/LUNAIRE 5.wav" id="18_3mj2n"]
[ext_resource type="AudioStream" uid="uid://dxrtwped6vaqv" path="res://audio/sfx/footsteps/footstep4.wav" id="18_g47bu"]
[ext_resource type="AudioStream" uid="uid://b7u7yobhjt1bs" path="res://audio/sfx/footsteps/footstep5.wav" id="19_1q63n"]
[ext_resource type="AudioStream" uid="uid://r8m22e7d5uhx" path="res://audio/sfx/voice/win lines/lunaire/LUNAIRE 6.wav" id="19_h5s1v"]
[ext_resource type="AudioStream" uid="uid://dqralkvm18h05" path="res://audio/sfx/footsteps/footstep6.wav" id="20_u8w43"]
[ext_resource type="AudioStream" uid="uid://tw2vn7b7srho" path="res://audio/sfx/voice/win lines/lunaire/LUNAIRE 7.wav" id="20_ukd00"]
[ext_resource type="AudioStream" uid="uid://dpxi4c4v7vtan" path="res://audio/sfx/footsteps/footstep7.wav" id="21_luu8r"]
[ext_resource type="AudioStream" uid="uid://d020ns63uhfum" path="res://audio/sfx/voice/Countdown Lets Go.mp3" id="22_voti4"]
[ext_resource type="AudioStream" uid="uid://yll7gn54fhwt" path="res://audio/sfx/guns/laser/LASER GUNSHOT 1.wav" id="23_xcxbv"]
[ext_resource type="AudioStream" uid="uid://cgdq2jyor3ld2" path="res://audio/sfx/guns/laser/LASER GUNSHOT 2.wav" id="24_gabko"]
[ext_resource type="AudioStream" uid="uid://vm6cbud3wq2h" path="res://audio/sfx/guns/laser/LASER GUNSHOT 3.wav" id="25_o3kqq"]
[ext_resource type="AudioStream" uid="uid://cj10xyk21hdr0" path="res://audio/sfx/nanosfx_slice2.wav" id="26_bh2ru"]
[ext_resource type="AudioStream" uid="uid://bn763x10aimig" path="res://audio/sfx/nanosfx_slide2.wav" id="27_joap3"]
[ext_resource type="AudioStream" uid="uid://bep8irrs65k7p" path="res://audio/sfx/nanosfx_dash.wav" id="28_r02ng"]
[ext_resource type="AudioStream" uid="uid://b5qd03mwlp5qm" path="res://audio/sfx/UI/UI - SCROLL.wav" id="28_swcnf"]
[ext_resource type="AudioStream" uid="uid://b3fwhfjc2hnl2" path="res://audio/sfx/UI/UI - SELECT 2.wav" id="30_u73mm"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5t01i"]
playback_mode = 2
streams_count = 13
stream_0/stream = ExtResource("2_v17bm")
stream_1/stream = ExtResource("12_5h8qd")
stream_2/stream = ExtResource("7_53mpv")
stream_3/stream = ExtResource("8_c8tfm")
stream_4/stream = ExtResource("9_pytyn")
stream_5/stream = ExtResource("10_yej68")
stream_6/stream = ExtResource("11_t6b4k")
stream_7/stream = ExtResource("12_5h8qd")
stream_8/stream = ExtResource("13_3mj2n")
stream_9/stream = ExtResource("14_h5s1v")
stream_10/stream = ExtResource("4_rj4sr")
stream_11/stream = ExtResource("5_e54hq")
stream_12/stream = ExtResource("6_2bd0h")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_l284g"]
playback_mode = 2
streams_count = 7
stream_0/stream = ExtResource("14_pytyn")
stream_1/stream = ExtResource("15_yej68")
stream_2/stream = ExtResource("16_t6b4k")
stream_3/stream = ExtResource("17_5h8qd")
stream_4/stream = ExtResource("18_3mj2n")
stream_5/stream = ExtResource("19_h5s1v")
stream_6/stream = ExtResource("20_ukd00")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_seic1"]
random_pitch = 1.1786075
random_volume_offset_db = 1.3
streams_count = 7
stream_0/stream = ExtResource("15_ukd00")
stream_1/stream = ExtResource("16_ag30j")
stream_2/stream = ExtResource("17_ul2n7")
stream_3/stream = ExtResource("18_g47bu")
stream_4/stream = ExtResource("19_1q63n")
stream_5/stream = ExtResource("20_u8w43")
stream_6/stream = ExtResource("21_luu8r")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sonwn"]
random_pitch = 1.1152883
streams_count = 3
stream_0/stream = ExtResource("23_xcxbv")
stream_1/stream = ExtResource("24_gabko")
stream_2/stream = ExtResource("25_o3kqq")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kwij1"]
random_pitch = 1.1797653
streams_count = 1
stream_0/stream = ExtResource("26_bh2ru")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_16rcm"]
random_pitch = 1.1277261
streams_count = 1
stream_0/stream = ExtResource("27_joap3")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nd6xr"]
random_pitch = 1.0861701
streams_count = 1
stream_0/stream = ExtResource("28_r02ng")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_v17bm"]
random_pitch = 1.0861701
streams_count = 1
stream_0/stream = ExtResource("28_swcnf")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_u73mm"]
random_pitch = 1.0861701
streams_count = 1
stream_0/stream = ExtResource("28_r02ng")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_53mpv"]
random_pitch = 1.0861701
streams_count = 1
stream_0/stream = ExtResource("28_r02ng")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_c8tfm"]
random_pitch = 1.0861701
streams_count = 1
stream_0/stream = ExtResource("28_r02ng")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rj4sr"]
random_pitch = 1.0861701
streams_count = 1
stream_0/stream = ExtResource("28_r02ng")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_e54hq"]
random_pitch = 1.0861701
streams_count = 1
stream_0/stream = ExtResource("27_joap3")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2bd0h"]
random_pitch = 1.0861701
streams_count = 1
stream_0/stream = ExtResource("27_joap3")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pytyn"]
random_pitch = 1.0861701
streams_count = 1
stream_0/stream = ExtResource("30_u73mm")

[node name="SFX" type="Node" unique_id=921009842]
script = ExtResource("1_swcnf")

[node name="EclipsoWin" type="AudioStreamPlayer" parent="." unique_id=999859652]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_5t01i")
bus = &"Eclipso"

[node name="LunaireWin" type="AudioStreamPlayer" parent="." unique_id=1330295297]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_l284g")
bus = &"Lunaire"

[node name="Footstep" type="AudioStreamPlayer" parent="." unique_id=1716174472]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_seic1")
volume_db = -22.0855
max_polyphony = 5
bus = &"Footstep"

[node name="Countdown" type="AudioStreamPlayer" parent="." unique_id=331000524]
unique_name_in_owner = true
stream = ExtResource("22_voti4")
volume_db = -16.7835
pitch_scale = 1.17
bus = &"SFX"

[node name="ShootLowPower" type="AudioStreamPlayer" parent="." unique_id=1053627837]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_sonwn")
volume_db = -16.7835
pitch_scale = 1.51
max_polyphony = 6
bus = &"SFX"

[node name="ShootHighPower" type="AudioStreamPlayer" parent="." unique_id=704918805]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_sonwn")
volume_db = -16.7835
pitch_scale = 2.15
max_polyphony = 6
bus = &"SFX"

[node name="GrowPillar" type="AudioStreamPlayer" parent="." unique_id=1499285772]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_kwij1")
volume_db = 6.1155
pitch_scale = 1.05
max_polyphony = 6
bus = &"SFX"

[node name="CreateHole" type="AudioStreamPlayer" parent="." unique_id=1237556275]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_16rcm")
volume_db = 5.3191
pitch_scale = 1.52
max_polyphony = 6
bus = &"SFX"

[node name="ProjectileExplode" type="AudioStreamPlayer" parent="." unique_id=319959933]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_nd6xr")
volume_db = -3.171
pitch_scale = 1.2
max_polyphony = 5
bus = &"SFX"

[node name="Scope" type="AudioStreamPlayer" parent="." unique_id=894898221]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_v17bm")
volume_db = -30.7742
pitch_scale = 0.32
max_polyphony = 5
bus = &"SFX"

[node name="Bounce" type="AudioStreamPlayer" parent="." unique_id=668656314]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_u73mm")
volume_db = -19.0637
pitch_scale = 2.79
max_polyphony = 5
bus = &"SFX"

[node name="Jump" type="AudioStreamPlayer" parent="." unique_id=719602153]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_53mpv")
volume_db = -19.0637
pitch_scale = 2.79
max_polyphony = 5
bus = &"SFX"

[node name="Land" type="AudioStreamPlayer" parent="." unique_id=355560648]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_c8tfm")
volume_db = -19.0637
pitch_scale = 2.79
max_polyphony = 5
bus = &"SFX"

[node name="Dash" type="AudioStreamPlayer" parent="." unique_id=720519115]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_rj4sr")
volume_db = -7.0744
pitch_scale = 1.33
max_polyphony = 5
bus = &"SFX"

[node name="Slide" type="AudioStreamPlayer" parent="." unique_id=17699092]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_e54hq")
volume_db = -7.0744
pitch_scale = 0.94
max_polyphony = 5
bus = &"SFX"

[node name="QuickStop" type="AudioStreamPlayer" parent="." unique_id=136278198]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_2bd0h")
volume_db = -15.1601
pitch_scale = 3.69
max_polyphony = 5
bus = &"SFX"

[node name="Swap" type="AudioStreamPlayer" parent="." unique_id=1367177630]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_pytyn")
volume_db = -15.1601
pitch_scale = 0.68
max_polyphony = 5
bus = &"SFX"
